<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aplications.glp.PrincipalActivity">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />-->

    <item
        android:id="@+id/action_cerrar_sesion"
        android:title="@string/action_cerrar_sesion"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_generar_reporte"
        android:title="@string/action_generar_reporte"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_lista_registros"
        android:title="@string/action_lista_registros"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
